--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.0.1
-psycopg2-binary==2.9.1
-python-dotenv==0.19.0
+Flask==3.0.2
+python-dotenv==1.0.1
 Flask-WTF==1.2.1
-bcrypt==3.2.0
-Flask-Limiter==3.3.0
+bcrypt==4.1.2
+Flask-Limiter==3.5.0
 limits==3.7.0
 ordered-set==4.1.0
-pytest==6.2.5
-gunicorn==20.1.0
-Flask-CORS==4.0.0 
+supabase==2.3.5
+pytest==8.0.2
+psycopg2-binary==2.9.9
+gunicorn==21.2.0 
