--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: lokiplus-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.app:app
+    startCommand: cd src && gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -15,5 +15,7 @@ services:
         sync: false
       - key: SUPABASE_KEY
         sync: false
+      - key: PYTHONPATH
+        value: .
     healthCheckPath: /health
     autoDeploy: true 
