--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "src/"
-  publish = "static/"
-  command = "python build.py"
+  base = "src"
+  publish = "static"
+  command = "pip install -r ../requirements.txt && python build.py"
 
 [[redirects]]
   from = "/*"
@@ -9,4 +9,5 @@
   status = 200
 
 [build.environment]
-  PYTHON_VERSION = "3.11" 
+  PYTHON_VERSION = "3.11"
+  NODE_VERSION = "18" 
