--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ psycopg2-binary==2.9.9
 gunicorn==21.2.0
 Werkzeug==3.0.1
 requests==2.31.0
-python-jose==3.3.0 
+python-jose==3.3.0
+flask-cors==4.0.0 
