--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,10 @@ wheels/
 *.egg
 
 # Virtual Environment
-.env
-.venv
-env/
 venv/
+env/
 ENV/
+.env
 
 # IDE
 .idea/
@@ -33,11 +32,15 @@ ENV/
 *.swp
 *.swo
 
+# OS
+.DS_Store
+Thumbs.db
+
 # Logs
 *.log
+logs/
 
 # Local development
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
