--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "src"
-  publish = "static"
-  command = "pip install -r ../requirements.txt && python build.py"
+  command = "python build.py"
+  publish = "src/static"
 
 [[redirects]]
   from = "/*"
@@ -9,5 +8,13 @@
   status = 200
 
 [build.environment]
-  PYTHON_VERSION = "3.11"
-  NODE_VERSION = "18" 
+  PYTHON_VERSION = "3.11.0"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:;" 
